--- a/src/utilities/core/_typography-extended.scss
+++ b/src/utilities/core/_typography-extended.scss
@@ -5,7 +5,7 @@
 
 @use '../../config/settings' as settings;
 
-@if settings.$enable-typography-extended ==true {
+@if settings.$enable-typography-extended == true {
 
   .text-style-normal {
     font-style: normal;
@@ -53,32 +53,6 @@
 
   .text-decoration-overline {
     text-decoration: overline;
-  }
-
-  // Text Decoration Colors
-  // ============================================================================
-  .decoration-primary {
-    text-decoration-color: var(--color-primary);
-  }
-
-  .decoration-secondary {
-    text-decoration-color: var(--color-secondary);
-  }
-
-  .decoration-success {
-    text-decoration-color: var(--color-success);
-  }
-
-  .decoration-danger {
-    text-decoration-color: var(--color-danger);
-  }
-
-  .decoration-warning {
-    text-decoration-color: var(--color-warning);
-  }
-
-  .decoration-info {
-    text-decoration-color: var(--color-info);
   }
 
   // Text Decoration Thickness
